# IMAGO-C3

./: .gitignore  README.md  docker-compose.yml  sandbox.config.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  elastic.py  main.py
backend/tests/: test_main.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js
